objects/LAT_DocuSign_Recipient_Status__c.object
<CustomObject>
    <fields>
        <fullName>Date_Sent__c</fullName>
        <label>Date Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Declined_Date__c</fullName>
        <label>Declined_Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Delivered_Date__c</fullName>
        <label>Delivered_Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DocuSign_Recipient_Email__c</fullName>
        <description>DocuSign_Recipient_Email__c	 	 
Description	contains an email (type text cause mapping in docusign does not allow it)</description>
        <label>DocuSign Recipient Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Envelope_Id__c</fullName>
        <formula>Parent_Status_Record__r.DocuSign_Envelope_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Envelope Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lat_contract2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contrato</label>
        <referenceTo>LAT_Contract2__c</referenceTo>
        <relationshipName>LAT_DocuSign_Recipient_Status</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Status_Record__c</fullName>
        <description>Parent Envelope</description>
        <label>Docusign Status custom</label>
        <referenceTo>LAT_DocuSign_Status__c</referenceTo>
        <relationshipName>DocuSign_Recipient_Status</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RecipientId__c</fullName>
        <label>RecipientId</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Name__c</fullName>
        <label>Recipient Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Status__c</fullName>
        <label>Recipient Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_sfId__c</fullName>
        <description>Contact or User Id if apply</description>
        <inlineHelpText>Contact or User Id if apply</inlineHelpText>
        <label>Related SF Id</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Routing_Order__c</fullName>
        <label>Routing_Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Signed_Date__c</fullName>
        <label>Signed Date</label>
        <type>DateTime</type>
    </fields>
    <label>Assinaturas DocuSign</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Lat_contract2__c</columns>
        <columns>Role__c</columns>
        <columns>NAME</columns>
        <columns>DocuSign_Recipient_Email__c</columns>
        <columns>Date_Sent__c</columns>
        <columns>Declined_Date__c</columns>
        <columns>Delivered_Date__c</columns>
        <columns>Signed_Date__c</columns>
        <columns>Recipient_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>pt_BR</language>
    </listViews>
    <listViews>
        <fullName>All_IT</fullName>
        <columns>Lat_contract2__c</columns>
        <columns>Role__c</columns>
        <columns>NAME</columns>
        <columns>DocuSign_Recipient_Email__c</columns>
        <columns>Date_Sent__c</columns>
        <columns>Declined_Date__c</columns>
        <columns>Delivered_Date__c</columns>
        <columns>Signed_Date__c</columns>
        <columns>Recipient_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Recipient_Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <label>All IT</label>
        <language>pt_BR</language>
    </listViews>
    <nameField>
        <label>DocuSign Recipient Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assinaturas DocuSign</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>